# vibe-LLM-annotate-no-edit

./: .gitignore  README.md  ideas.txt  pyproject.toml
benchmarks/documents/: code_sample.py  dialogue_sample.txt  simple_text.txt  technical_doc.md
examples/: annotation_tasks.py  basic_usage.py  run_benchmark.py
llm_annotate/: __init__.py  annotator.py  cli.py  core.py  llm_client.py
llm_annotate/evaluation/: __init__.py  benchmark.py  metrics.py
llm_annotate/strategies/: __init__.py  anchor_based.py  base.py  baseline_naive.py  chunked_verified.py  diff_insertion_only.py  index_labeling.py  inline_diff_verify.py  line_reference.py  marker_referenced.py  offset_based.py  xml_inline.py
llm_annotate/utils/: __init__.py  verification.py
tests/: __init__.py  test_core.py  test_new_strategies.py  test_strategies.py
